# TMF8828

./: README.md  TMF8828-3D-Model.stp  TMF8828-HandSolder.kicad_mod  TMF8828.kicad_mod  tmf8828.kicad_sym
tmf8828_experiment_board/: CMakeLists.txt  common_utils.h  extrafunc.c  extrafunc.h  fsp_error.h  main.c  registers_i2c.h  tmf8828.c  tmf8828.h  tmf8828_calib.c  tmf8828_calib.h  tmf8828_image.c  tmf8828_image.h  tmf8828_sensor.c  tmf8828_sensor.h  tmf8828_shim.c  tmf8828_shim.h  wire.c  wire.h
